--- a/css/contact.css
+++ b/css/contact.css
@@ -1,5 +1,5 @@
 body { 
-    background-image: url(/assets/images/Contact-us.gif);
+    background-image: url(/images/Contact-us.gif);
     }
     
     header {
