--- a/css/index.css
+++ b/css/index.css
@@ -12,7 +12,7 @@ header {
     background-color:saddlebrown;
     height: 50px;
     text-align: center;
-    color: mistyrose;
+    color: mistyrose
     font-size: 30px;
   } 
   
