--- a/css/about.css
+++ b/css/about.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url(/images/pngtree-flat-business-style-banner-picture-image_1020686.jpg);
+    background: url(/images/pngtree-flat-business-style-banner-picture-image_1020686.jpg);
     background-repeat: repeat;
     
 
