--- a/css/index.css
+++ b/css/index.css
@@ -18,7 +18,7 @@ header {
   
   
   body{
-     background: url(/images/_.jpeg);
+     background: url('/images/_.jpeg');
      font-size: 25px;
      background-attachment: fixed;
      
