--- a/css/index.css
+++ b/css/index.css
@@ -1,61 +1,66 @@
 header {
-    padding: 20px;
-    text-align:right;
-    color:saddlebrown; ;
-    position: relative;
-    border-color: 4px lightsalmon ;
-    font-size: 30px;
-    
-  } 
+  padding: 20px;
+  text-align: right;
+  color: saddlebrown;
+  ;
+  position: relative;
+  border-color: 4px lightsalmon;
+  font-size: 30px;
 
-  nav {
-    background-color:saddlebrown;
-    height: 50px;
-    text-align: center;
-    color: mistyrose;
-    font-size: 30px;
-  } 
-  
-  
-  body{
-     background: url('/images/_.jpeg');
-     font-size: 25px;
-     background-attachment: fixed;
-     
-  }   
-                       
+}
+
+nav {
+  background-color: saddlebrown;
+  height: 50px;
+  text-align: center;
+  color: mistyrose;
+  font-size: 30px;
+}
+
+
+body {
+
+  font-size: 25px;
+
+
+}
+
 footer {
-    text-align: center;
-    color: saddlebrown ;
-    font-size: 25px;
-  }
-  
-  .heading {
-    width:600px;
-    height:300px;
-    text-align: center;
-    position: sticky;
-    margin-left: 1000px;
-    background-color:mistyrose;
-  }
+  text-align: center;
+  color: saddlebrown;
+  font-size: 25px;
+}
+
+.heading {
+  width: 600px;
+  height: 300px;
+  text-align: center;
+  position: sticky;
+  margin-left: 1000px;
+  background-color: mistyrose;
+}
+
 h2 {
   font-size: 30px;
   text-decoration: double underline;
-  color:saddlebrown;
+  color: saddlebrown;
 }
+
 h3 {
   font-size: 30px;
   text-decoration: double underline;
-  color:saddlebrown;
+  color: saddlebrown;
 }
+
 h4 {
   font-size: 30px;
   text-decoration: double underline;
-  color:saddlebrown;
+  color: saddlebrown;
 }
+
 footer {
   background-color: mistyrose;
-  color:saddlebrown;
+  color: saddlebrown;
   font-size: 20px;
   height: 30px;
 }
